--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
   },
   "homepage": "https://weapp-tw.icebreaker.top",
   "devDependencies": {
+    "@ast-grep/napi": "^0.19.4",
     "@babel/core": "^7.24.3",
     "@icebreakers/cli": "0.1.1",
     "@icebreakers/readme": "0.1.0",
@@ -194,7 +195,7 @@
     "@types/webpack4": "npm:@types/webpack@4",
     "@vitest/coverage-v8": "^1.4.0",
     "@vitest/ui": "^1.4.0",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "bumpp": "^9.4.0",
     "colorette": "^2.0.20",
@@ -235,18 +236,17 @@
     "ts-patch": "^3.1.2",
     "tsd": "^0.30.7",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.2",
+    "typescript": "^5.4.3",
     "typescript-transform-paths": "^3.4.7",
     "vinyl": "^3.0.0",
     "vite": "^5.2.2",
     "vitest": "^1.4.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.90.3",
+    "webpack": "^5.91.0",
     "webpack-build-utils": "^0.0.7"
   },
   "dependencies": {
     "@ast-core/escape": "^1.0.1",
-    "@ast-grep/napi": "^0.19.4",
     "@babel/generator": "7.24.1",
     "@babel/parser": "7.24.1",
     "@babel/traverse": "7.24.1",
@@ -257,18 +257,21 @@
     "@weapp-core/regex": "^1.0.1",
     "debug": "4.3.4",
     "htmlparser2": "9.1.0",
-    "loader-utils": "2.0.3",
+    "loader-utils": "2.0.4",
     "lru-cache": "10.2.0",
     "magic-string": "0.30.8",
     "md5": "2.3.0",
-    "postcss": "8.4.37",
+    "postcss": "8.4.38",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-selector-parser": "6.0.16",
     "semver": "7.6.0",
     "tailwindcss-patch": "^2.2.3",
     "webpack-sources": "3.2.3"
   },
-  "packageManager": "pnpm@8.10.2",
+  "optionalDependencies": {
+    "@ast-grep/napi": "^0.19.4"
+  },
+  "packageManager": "pnpm@8.15.4",
   "engines": {
     "node": ">=16.6.0"
   }
