--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -72,7 +72,7 @@
     "typescript": "^5.4.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.0-beta.5"
+    "weapp-tailwindcss-webpack-plugin": "^3.1.0"
   },
   "dependencies": {
     "@vant/weapp": "^1.11.4"
