--- a/demo/uni-app/package.json
+++ b/demo/uni-app/package.json
@@ -121,7 +121,7 @@
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.0-beta.5"
+    "weapp-tailwindcss-webpack-plugin": "^3.1.0"
   },
   "browserslist": [
     "Android >= 4.4",
