--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -21,6 +21,6 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.0-beta.5"
+    "weapp-tailwindcss-webpack-plugin": "^3.1.0"
   }
 }
