--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -62,13 +62,13 @@
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-patch": "^2.2.3",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.4.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.0",
+    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-sources": "^3.2.3"
