--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -68,7 +68,7 @@
     "typescript": "^5.4.2",
     "weapp-ide-cli": "^1.0.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
+    "weapp-tailwindcss-webpack-plugin": "^3.1.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4",
     "webpack-sources": "^3.2.3"
