--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -30,10 +30,12 @@
   "dependencies": {
     "chokidar": "^3.6.0",
     "commander": "^12.0.0",
+    "cosmiconfig": "^9.0.0",
     "fs-extra": "^11.2.0",
     "weapp-tailwindcss": "^3.1.1"
   },
   "devDependencies": {
-    "@types/fs-extra": "^11.0.4"
+    "@types/fs-extra": "^11.0.4",
+    "defu": "^6.1.4"
   }
 }
