--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -31,6 +31,7 @@
     "chokidar": "^3.6.0",
     "commander": "^12.0.0",
     "cosmiconfig": "^9.0.0",
+    "del": "^7.1.0",
     "fs-extra": "^11.2.0",
     "weapp-tailwindcss": "^3.1.1"
   },
