--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -36,6 +36,7 @@
     "del": "^7.1.0",
     "fs-extra": "^11.2.0",
     "gulp": "^5.0.0",
+    "postcss-load-config": "^5.0.3",
     "ts-morph": "^22.0.0",
     "weapp-tailwindcss": "^3.1.1"
   },
