--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "weapp-tailwindcss-webpack-plugin",
-  "version": "3.1.1",
+  "name": "weapp-tailwindcss",
+  "version": "3.2.0-alpha.0",
   "description": "把tailwindcss jit引擎，带给小程序开发者们! bring tailwindcss jit engine to miniprogram developers!",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
