--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -34,14 +34,14 @@
     "del": "^7.1.0",
     "gulp": "^5.0.0",
     "postcss-load-config": "^5.0.3",
-    "weapp-tailwindcss": "3.1.1"
+    "weapp-tailwindcss": "3.2.0-alpha.0",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
     "@types/gulp": "^4.0.17",
     "chokidar": "^3.6.0",
     "defu": "^6.1.4",
-    "fs-extra": "^11.2.0",
     "ts-morph": "^22.0.0"
   }
 }
