--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -71,8 +71,9 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2",
     "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss": "^3.2.0-alpha.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1"
+    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0"
   },
   "dependencies": {
     "@vant/weapp": "^1.11.4"
