--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -85,8 +85,9 @@
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.4.2",
     "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss": "^3.2.0-alpha.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1",
+    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
     "webpack": "^5.90.3",
     "webpack-chain": "^6.5.1"
   },
