--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -90,8 +90,9 @@
     "typescript": "~5.4.2",
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss": "^3.2.0-alpha.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1",
+    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
     "webpack": "^5.90.3"
   }
 }
