--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -83,8 +83,9 @@
     "unplugin-vue-components": "^0.26.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
+    "weapp-tailwindcss": "^3.2.0-alpha.1",
     "weapp-tailwindcss-children": "^0.1.0",
-    "weapp-tailwindcss-webpack-plugin": "^3.1.1",
+    "weapp-tailwindcss-webpack-plugin": "^3.1.1-beta.0",
     "webpack": "^5.90.3"
   }
 }
