--- a/plugins/cli/package.json
+++ b/plugins/cli/package.json
@@ -33,17 +33,21 @@
     "cosmiconfig": "^9.0.0",
     "del": "^7.1.0",
     "fs-extra": "^11.2.0",
+    "gulp": "^5.0.0",
+    "gulp-less": "^5.0.0",
+    "gulp-sass": "^5.1.0",
     "postcss-load-config": "^5.0.3",
-    "vinyl-fs": "^4.0.0",
     "weapp-tailwindcss": "3.2.0-alpha.1"
   },
   "devDependencies": {
-    "gulp": "^5.0.0",
     "@types/fs-extra": "^11.0.4",
     "@types/gulp": "^4.0.17",
+    "@types/gulp-less": "^0.0.36",
+    "@types/gulp-sass": "^5.0.4",
     "@types/vinyl-fs": "^3.0.5",
     "chokidar": "^3.6.0",
     "defu": "^6.1.4",
-    "ts-morph": "^22.0.0"
+    "ts-morph": "^22.0.0",
+    "vinyl-fs": "^4.0.0"
   }
 }
