--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -16,15 +16,15 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@mpxjs/api-proxy": "^2.9.28",
-    "@mpxjs/core": "^2.9.33",
+    "@mpxjs/api-proxy": "^2.9.38",
+    "@mpxjs/core": "^2.9.38",
     "@mpxjs/fetch": "^2.9.1",
-    "@mpxjs/pinia": "^2.9.31",
-    "@mpxjs/store": "^2.9.9",
-    "@mpxjs/utils": "^2.9.1",
+    "@mpxjs/pinia": "^2.9.38",
+    "@mpxjs/store": "^2.9.38",
+    "@mpxjs/utils": "^2.9.38",
     "@vant/weapp": "^1.11.6",
     "pinia": "^2.1.7",
-    "tdesign-miniprogram": "^1.4.2",
+    "tdesign-miniprogram": "^1.4.3",
     "vue": "^2.6.14",
     "vue-demi": "^0.13.11",
     "vue-i18n": "^8.27.2",
@@ -42,12 +42,12 @@
     "@mpxjs/mpx-cli-service": "^2.1.11",
     "@mpxjs/mpx-jest": "^0.0.30",
     "@mpxjs/size-report": "^2.9.26",
-    "@mpxjs/vue-cli-plugin-mpx": "^2.1.10",
-    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.10",
-    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.10",
-    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.10",
-    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.10",
-    "@mpxjs/webpack-plugin": "^2.9.35",
+    "@mpxjs/vue-cli-plugin-mpx": "^2.1.11",
+    "@mpxjs/vue-cli-plugin-mpx-e2e-test": "^2.1.11",
+    "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.1.11",
+    "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.1.11",
+    "@mpxjs/vue-cli-plugin-mpx-unit-test": "^2.1.11",
+    "@mpxjs/webpack-plugin": "^2.9.38",
     "@vue/cli-service": "~5.0.0",
     "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "^10.4.19",
@@ -59,21 +59,21 @@
     "postcss-loader": "^8.1.1",
     "postcss-rem-to-responsive-pixel": "^6.0.1",
     "postcss-rpx-transform": "^1.0.1",
-    "sass": "^1.77.5",
+    "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
     "stylus": "^0.63.0",
     "stylus-loader": "^8.1.0",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.4",
-    "tailwindcss-patch": "^3.0.0",
+    "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
-    "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5",
+    "ts-jest": "^29.1.5",
+    "typescript": "^5.5.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.1",
+    "weapp-tailwindcss": "^3.3.2-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.92.0"
+    "webpack": "^5.92.1"
   },
   "browserslist": [
     "ios >= 8",
