--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -71,7 +71,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "@vue/babel-preset-jsx": "^1.2.4",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "autoprefixer": "^10.4.19",
     "babel-preset-taro": "3.6.32",
     "cross-env": "^7.0.3",
@@ -86,12 +86,12 @@
     "stylelint": "^16.6.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.4",
-    "tailwindcss-patch": "^3.0.0",
+    "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.5",
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.1",
+    "weapp-tailwindcss": "^3.3.2-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.0"
   },
