--- a/demo/taro-vue3-app/package.json
+++ b/demo/taro-vue3-app/package.json
@@ -65,7 +65,7 @@
     "@typescript-eslint/parser": "^7.1.1",
     "@vue/babel-plugin-jsx": "^1.1.5",
     "@vue/compiler-sfc": "^3.3.4",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "autoprefixer": "^10.4.19",
     "babel-preset-taro": "3.6.31",
     "cross-env": "^7.0.3",
@@ -78,13 +78,13 @@
     "postcss-rpx-transform": "^1.0.1",
     "stylelint": "16.6.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
-    "tailwindcss-patch": "^3.0.0",
+    "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.5",
     "unplugin-vue-components": "^0.27.0",
     "vue-loader": "^17.2.2",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.1",
+    "weapp-tailwindcss": "^3.3.2-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.90.3"
   },
