--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -80,7 +80,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@vue/runtime-core": "^3.4.21",
-    "@weapp-tailwindcss/cli": "^1.0.3",
+    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
     "@weapp-tailwindcss/typography": "^0.2.4",
     "autoprefixer": "^10.4.18",
     "miniprogram-api-typings": "^3.12.2",
@@ -90,12 +90,12 @@
     "sass": "^1.71.1",
     "tailwind-css-variables-theme-generator": "^0.4.0",
     "tailwindcss": "^3.4.4",
-    "tailwindcss-patch": "^3.0.0",
+    "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "~5.4.2",
     "vite": "5.2.8",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.1",
+    "weapp-tailwindcss": "^3.3.2-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
