--- a/demo/gulp-app/package.json
+++ b/demo/gulp-app/package.json
@@ -41,7 +41,7 @@
     "@types/gulp-sass": "^5.0.4",
     "@types/gulp-util": "^3.0.41",
     "@types/node": "^20.14.2",
-    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
@@ -74,7 +74,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.2-alpha.0",
+    "weapp-tailwindcss": "^3.3.2",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "dependencies": {
