--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -71,7 +71,7 @@
     "typescript": "^5.5.2",
     "vue-template-compiler": "^2.7.16",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.2-alpha.0",
+    "weapp-tailwindcss": "^3.3.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.1"
   },
