--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@iceworks/spec": "^1.6.0",
     "@types/rax": "^1.0.18",
-    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
@@ -43,7 +43,7 @@
     "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.2-alpha.0",
+    "weapp-tailwindcss": "^3.3.2",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "private": true,
