--- a/demo/taro-app/package.json
+++ b/demo/taro-app/package.json
@@ -63,7 +63,7 @@
     "@types/webpack-env": "^1.18.5",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
-    "@weapp-tailwindcss/cli": "^0.0.0-alpha.9",
+    "@weapp-tailwindcss/cli": "^1.0.3",
     "autoprefixer": "^10.4.19",
     "babel-plugin-import": "^1.13.8",
     "babel-preset-taro": "3.6.32",
@@ -86,7 +86,7 @@
     "terser-webpack-plugin": "^5.3.10",
     "typescript": "~5.4.5",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.2-alpha.0",
+    "weapp-tailwindcss": "^3.3.2",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.0",
     "webpack-chain": "^6.5.1"
