--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,4 @@
-registry=http://registry.npmmirror.com/
+# registry=http://registry.npmmirror.com/
 msvs_version=2017
 git-checks=false
 package-manager-strict=false
