--- a/package.json
+++ b/package.json
@@ -84,10 +84,10 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@ast-grep/napi": "^0.24.0",
+    "@ast-grep/napi": "^0.24.1",
     "@babel/core": "^7.24.7",
-    "@eslint/config-inspector": "^0.5.0",
-    "@icebreakers/eslint-config": "^0.3.9",
+    "@eslint/config-inspector": "^0.5.1",
+    "@icebreakers/eslint-config": "^0.3.10",
     "@icebreakers/readme": "0.1.0",
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-commonjs": "^26.0.1",
@@ -95,7 +95,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@tsconfig/recommended": "^1.0.6",
+    "@tsconfig/recommended": "^1.0.7",
     "@types/babel__generator": "^7.6.8",
     "@types/babel__traverse": "^7.20.6",
     "@types/debug": "^4.1.12",
@@ -113,10 +113,10 @@
     "@types/js-beautify": "^1.14.3",
     "@types/klaw": "^3.0.6",
     "@types/loader-utils": "^2.0.6",
-    "@types/lodash": "^4.17.5",
+    "@types/lodash": "^4.17.6",
     "@types/md5": "^2.3.5",
-    "@types/micromatch": "^4.0.7",
-    "@types/node": "^20.14.8",
+    "@types/micromatch": "^4.0.9",
+    "@types/node": "^20.14.9",
     "@types/semver": "^7.5.8",
     "@types/set-value": "^4.0.3",
     "@types/vinyl": "^2.0.12",
@@ -142,7 +142,7 @@
     "del": "^7.1.0",
     "diff": "^5.2.0",
     "domhandler": "^5.0.3",
-    "eslint": "9.5.0",
+    "eslint": "9.6.0",
     "eslint-config-icebreaker": "^1.2.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -159,8 +159,8 @@
     "mini-css-extract-plugin": "^2.9.0",
     "miniprogram-automator": "^0.12.1",
     "pathe": "^1.1.2",
-    "pkg-types": "^1.1.1",
-    "postcss": "^8.4.38",
+    "pkg-types": "^1.1.3",
+    "postcss": "^8.4.39",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.2",
@@ -177,13 +177,13 @@
     "ts-patch": "^3.2.1",
     "tsd": "^0.31.1",
     "tslib": "^2.6.3",
-    "turbo": "^2.0.5",
-    "typescript": "^5.5.2",
+    "turbo": "^2.0.6",
+    "typescript": "5.4.5",
     "typescript-transform-paths": "^3.4.7",
     "unbuild": "^2.0.0",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
-    "vite": "^5.3.1",
+    "vite": "^5.3.3",
     "vitest": "^1.6.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.1",
