--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -68,7 +68,7 @@
     "tailwindcss-rem2px-preset": "^1.0.3",
     "typescript": "^5.4.2",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.6",
+    "weapp-tailwindcss": "^3.3.7-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
