--- a/demo/rax-app/package.json
+++ b/demo/rax-app/package.json
@@ -43,7 +43,7 @@
     "tailwindcss-patch": "^3.0.2",
     "tailwindcss-rem2px-preset": "^1.0.3",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.6",
+    "weapp-tailwindcss": "^3.3.7-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "private": true,
