--- a/demo/taro-vue2-app/package.json
+++ b/demo/taro-vue2-app/package.json
@@ -91,7 +91,7 @@
     "typescript": "~5.4.5",
     "vue-loader": "^15.11.1",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.6",
+    "weapp-tailwindcss": "^3.3.7-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0",
     "webpack": "^5.92.0"
   },
