--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -95,7 +95,7 @@
     "typescript": "~5.4.2",
     "vite": "5.2.8",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.6",
+    "weapp-tailwindcss": "^3.3.7-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "packageManager": "yarn@1.22.22"
