--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -119,7 +119,7 @@
     "typescript": "~5.4.2",
     "vue-template-compiler": ">= 2.6.14 < 2.7",
     "weapp-ide-cli": "^1.0.1",
-    "weapp-tailwindcss": "^3.3.6",
+    "weapp-tailwindcss": "^3.3.7-alpha.0",
     "weapp-tailwindcss-children": "^0.1.0"
   },
   "browserslist": [
