--- a/package.json
+++ b/package.json
@@ -97,13 +97,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
-    "@babel/generator": "~7.26.10",
+    "@babel/generator": "~7.27.0",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.28.1",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@commitlint/prompt-cli": "^19.8.0",
     "@commitlint/types": "^19.8.0",
+    "@csstools/css-color-parser": "^3.0.8",
+    "@csstools/css-parser-algorithms": "^3.0.4",
+    "@csstools/css-tokenizer": "^3.0.3",
     "@eslint/config-inspector": "^1.0.2",
     "@icebreakers/eslint-config": "^1.0.4",
     "@icebreakers/monorepo": "^0.7.9",
@@ -113,7 +116,7 @@
     "@types/babel__generator": "^7.6.8",
     "@types/babel__traverse": "^7.20.6",
     "@types/debug": "^4.1.12",
-    "@types/diff": "^7.0.1",
+    "@types/diff": "^7.0.2",
     "@types/dlv": "^1.1.5",
     "@types/express": "^5.0.1",
     "@types/fs-extra": "^11.0.4",
@@ -135,11 +138,12 @@
     "@types/lodash-es": "^4.17.12",
     "@types/md5": "^2.3.5",
     "@types/micromatch": "^4.0.9",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.13",
     "@types/npm-registry-fetch": "^8.0.7",
     "@types/postcss-js": "^4.0.4",
     "@types/semver": "^7.5.8",
     "@types/set-value": "^4.0.3",
+    "@types/traverse": "^0.6.37",
     "@types/uuid": "^10.0.0",
     "@types/vinyl": "^2.0.12",
     "@types/vinyl-fs": "^3.0.5",
@@ -169,7 +173,7 @@
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
     "es-toolkit": "^1.33.0",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "execa": "^9.5.2",
     "express": "^4.21.2",
     "fast-glob": "^3.3.3",
@@ -212,7 +216,9 @@
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "catalog:tailwindcss3",
+    "tailwindcss4": "npm:tailwindcss@^4.0.0",
     "terser-webpack-plugin": "^5.3.14",
+    "traverse": "^0.6.11",
     "ts-morph": "^25.0.1",
     "tsd": "^0.31.2",
     "tslib": "^2.8.0",
@@ -224,7 +230,7 @@
     "uuid": "^11.1.0",
     "vinyl": "^3.0.0",
     "vinyl-fs": "^4.0.0",
-    "vite": "^6.2.2",
+    "vite": "^6.2.3",
     "vite-plugin-inspect": "^11.0.0",
     "vitest": "~3.0.9",
     "weapp-tailwindcss": "workspace:*",
