--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -138,8 +138,6 @@
   "scripts": {
     "dev": "tsup --watch --sourcemap",
     "build": "tsup",
-    "_dev": "pnpm clean && cross-env NODE_ENV=development rollup -c rollup.config.ts --configPlugin typescript -w",
-    "_build": "pnpm clean && cross-env NODE_ENV=production rollup -c rollup.config.ts --configPlugin typescript",
     "build:tsc": "cross-env NODE_ENV=development tsc --build tsconfig.json",
     "build:cli": "cd plugins/cli && pnpm run build",
     "test": "npm run postinstall && vitest run",
@@ -149,6 +147,7 @@
     "get-decl": "tsx scripts/get-decl.ts",
     "ls:pack": "npm pack --dry-run",
     "cli:patch": "node bin/weapp-tailwindcss.js patch",
+    "colors": "tsx scripts/colors.ts",
     "release": "tsx scripts/release.ts",
     "lint": "eslint .",
     "lint:fix": "eslint ./src --fix",
@@ -161,9 +160,9 @@
   },
   "dependencies": {
     "@ast-core/escape": "~1.0.1",
-    "@babel/parser": "~7.26.10",
-    "@babel/traverse": "~7.26.10",
-    "@babel/types": "~7.26.10",
+    "@babel/parser": "~7.27.0",
+    "@babel/traverse": "~7.27.0",
+    "@babel/types": "~7.27.0",
     "@weapp-core/escape": "~4.0.1",
     "@weapp-core/regex": "~1.0.1",
     "@weapp-tailwindcss/init": "workspace:*",
