--- a/package.json
+++ b/package.json
@@ -219,11 +219,11 @@
     "set-value": "^4.1.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "catalog:tailwindcss3",
-    "tailwindcss4": "npm:tailwindcss@^4.1.2",
+    "tailwindcss4": "catalog:tailwindcss4",
     "terser-webpack-plugin": "^5.3.14",
     "traverse": "^0.6.11",
     "ts-morph": "^25.0.1",
-    "tsd": "^0.31.2",
+    "tsd": "^0.32.0",
     "tslib": "^2.8.0",
     "tsup": "^8.4.0",
     "tsx": "^4.19.3",
@@ -238,7 +238,7 @@
     "vitest": "~3.1.1",
     "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "^0.1.0",
-    "webpack": "^5.98.0",
+    "webpack": "^5.99.5",
     "webpack-build-utils": "^0.0.7",
     "yaml": "^2.7.1"
   }
