--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -11,5 +11,6 @@ catalogs:
     tailwindcss: ^3.4.17
   tailwindcss4:
     tailwindcss: ^4.1.3
+    tailwindcss4: npm:tailwindcss@^4.1.3
 onlyBuiltDependencies:
   - esbuild
