--- a/apps/debug-x/package.json
+++ b/apps/debug-x/package.json
@@ -2,21 +2,13 @@
   "name": "@weapp-talwindcss/debug-uni-app-x",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.6.5",
   "description": "",
   "author": "",
   "license": "ISC",
   "keywords": [],
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
-    }
+    ".": "./src/index.ts"
   },
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "dev": "unbuild --stub",
     "build:watch": "unbuild --watch --sourcemap",
@@ -30,10 +22,22 @@
   "dependencies": {
     "defu": "6.1.4",
     "fs-extra": "11.3.0",
-    "pathe": "2.0.3",
-    "vite": "6.3.5"
+    "pathe": "2.0.3"
   },
   "devDependencies": {
-    "unbuild": "^3.5.0"
+    "unbuild": "^3.5.0",
+    "vite": "6.3.5"
+  },
+  "publishConfig": {
+    "exports": {
+      ".": {
+        "types": "./dist/index.d.ts",
+        "import": "./dist/index.mjs",
+        "require": "./dist/index.cjs"
+      }
+    },
+    "main": "./dist/index.cjs",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts"
   }
 }
